--- a/hw1-narrative/index.html
+++ b/hw1-narrative/index.html
@@ -2,7 +2,11 @@
 <html>
   <head></head>
   <body>
-    <h1>Narrative Homework</h1>
+    <h1>Tuesday Morning</h1>
+    <p>Sarah's alarm sounds at 7:00am, which she ignores.
+      After laying in bed for another <em>50 minutes</em>, she gets out of bed.
+    </p>
+    <img src="alarm.jpg">
     <a href="page2.html">page 2</a>
 
   </body>
