--- a/hw1-narrative/index.html
+++ b/hw1-narrative/index.html
@@ -3,11 +3,10 @@
   <head></head>
   <body>
     <h1>Tuesday Morning</h1>
+    <h3>7:00am</h3>
     <p>Sarah's alarm sounds at 7:00am, which she ignores.
       After laying in bed for another <em>50 minutes</em>, she gets out of bed.
     </p>
-    <img src="alarm.jpg">
-    <a href="page2.html">page 2</a>
-
+    <a href="page2.html"><img src="images/stars.jpeg" width="600"></a>
   </body>
 </html>
