--- a/hw1-narrative/page3.html
+++ b/hw1-narrative/page3.html
@@ -2,8 +2,10 @@
 <html>
   <head></head>
   <body>
-    <h1>Narrative Homework Page 2 </h1>
-    <a href="page4.html">page 4</a>
+    <h1>Tuesday Morning </h1>
+    <h3> 8:10am </h3>
+    <p>She goes downstairs and quickly feeds her cat. </p>
+    <a href="page4.html"><img src="images/stars.jpeg" width="600"></a>
 
 
   </body>
