--- a/hw1-narrative/page2.html
+++ b/hw1-narrative/page2.html
@@ -2,8 +2,10 @@
 <html>
   <head></head>
   <body>
-    <h1>Narrative Homework Page 2 </h1>
-    <a href="page3.html">page 3</a>
+    <h1>Tuesday Morning </h1>
+    <h3> 8:00am </h3>
+    <p>Sarah goes to the bathroom and starts to get ready. </p>
+    <a href="page3.html"><img src="images/stars.jpeg" width="600"></a>
 
 
   </body>
