--- a/hw1-narrative/page4.html
+++ b/hw1-narrative/page4.html
@@ -2,8 +2,10 @@
 <html>
   <head></head>
   <body>
-    <h1>Narrative Homework Page 2 </h1>
-    <a href="page5.html">page 5</a>
+    <h1>Tuesday Morning </h1>
+    <h3> 8:13am </h3>
+    <p>As she was about to leave, she remembers to also feed her fish. </p>
+    <a href="page5.html"><img src="images/stars.jpeg" width="600"></a>
 
 
   </body>
