--- a/hw1-narrative/index.html
+++ b/hw1-narrative/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head></head>
+
   <body>
     <h1>Tuesday Morning</h1>
     <h3>7:00am</h3>
-    <p>Sarah's alarm sounds at 7:00am, which she ignores.
-      After laying in bed for another <em>50 minutes</em>, she gets out of bed.
+    <p>My alarm sounded at 7:00am. I ignored it. <div>
+      After laying in bed for another <em>50 minutes</em>, I got out of bed.
     </p>
-    <a href="page2.html"><img src="images/stars.jpeg" width="600"></a>
+    <a href="page2.html"><img src="images/alarm.jpg" width="400" height="400"></a>
   </body>
 </html>
