--- a/hw1-narrative/page2.html
+++ b/hw1-narrative/page2.html
@@ -4,8 +4,8 @@
   <body>
     <h1>Tuesday Morning </h1>
     <h3> 8:00am </h3>
-    <p>Sarah goes to the bathroom and starts to get ready. </p>
-    <a href="page3.html"><img src="images/stars.jpeg" width="600"></a>
+    <p>I went to the bathroom and started to get ready. </p>
+    <a href="page3.html"><img src="images/toothbrush.png" width="400"></a>
 
 
   </body>
