--- a/hw1-narrative/page3.html
+++ b/hw1-narrative/page3.html
@@ -4,8 +4,8 @@
   <body>
     <h1>Tuesday Morning </h1>
     <h3> 8:10am </h3>
-    <p>She goes downstairs and quickly feeds her cat. </p>
-    <a href="page4.html"><img src="images/stars.jpeg" width="600"></a>
+    <p>I went downstairs and quickly fed my cat, Kevin. </p>
+    <a href="page3_2.html"><img src="images/catfood.jpg" width="200"></a>
 
 
   </body>
