--- a/hw1-narrative/page4.html
+++ b/hw1-narrative/page4.html
@@ -5,7 +5,7 @@
     <h1>Tuesday Morning </h1>
     <h3> 8:13am </h3>
     <p>As she was about to leave, she remembers to also feed her fish. </p>
-    <a href="page5.html"><img src="images/stars.jpeg" width="600"></a>
+    <a href="page5.html"><img src="images/beta.jpeg" width="400"></a>
 
 
   </body>
