--- a/hw1-narrative/page5.html
+++ b/hw1-narrative/page5.html
@@ -5,7 +5,7 @@
     <h1>Tuesday Morning </h1>
     <h3> 8:15am </h3>
     <p>After feeding her fish she looks at the clock and rushes out the door to catch the bus. </p>
-    <a href="index.html"><img src="images/stars.jpeg" width="600"></a>
+    <a href="index.html"><img src="images/trimet.png" width="400"></a>
 
 
   </body>
