--- a/hw1-narrative/page4.html
+++ b/hw1-narrative/page4.html
@@ -4,7 +4,7 @@
   <body>
     <h1>Tuesday Morning </h1>
     <h3> 8:13am </h3>
-    <p>As she was about to leave, she remembers to also feed her fish. </p>
+    <p>As I was about to leave, I remembered to also feed my fish, Danny. </p>
     <a href="page5.html"><img src="images/beta.jpeg" width="400"></a>
 
 
