--- a/hw1-narrative/page5.html
+++ b/hw1-narrative/page5.html
@@ -4,7 +4,7 @@
   <body>
     <h1>Tuesday Morning </h1>
     <h3> 8:15am </h3>
-    <p>After feeding her fish she looks at the clock and rushes out the door to catch the bus. </p>
+    <p>After feeding my fish I rush out the door to catch the bus. </p>
     <a href="index.html"><img src="images/trimet.png" width="400"></a>
 
 
