--- a/homeworks/hw2-multicol/index.html
+++ b/homeworks/hw2-multicol/index.html
@@ -6,30 +6,44 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>videos i love</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=BioRhyme+Expanded:400,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body class = "videos-i-love" >
+  <div align="center">
 
-  <h1> videos i love </h1>
-  <div></div>
-  <h3> Here are some videos that make me smile, cry, laugh,and shiver.</h3>
+  <h1> VIDEOS I LOVE </h1>
 
   <section>
+
     <div>
-      <a href="https://youtu.be/1HdnjTCMzpg?t=4"><img src="images/hazel-scott.jpg" width="400"></a>
+      <a href="https://youtu.be/1HdnjTCMzpg?t=4" target="_blank" rel="noopener noreferrer"><img src="images/hazel-scott.jpg" width="300"></a>
+      <p> Hazel Scott Playing Two Pianos</p>
     </div>
 
     <div>
-      <a href="https://youtu.be/4cYYPpZ8rFI"><img src="images/true-stories.jpg" width="400"></a>
+      <a href="https://youtu.be/mNQamkx8Mjc" target="_blank" rel="noopener noreferrer"><img src="images/a-z.png" width="300"></a>
+      <p> A-Z of Music</p>
     </div>
 
     <div>
-      <a href="https://youtu.be/NgDoEKyBSA4"><img src="images/michael-cera.jpg" width="400"></a>
+      <a href="https://youtu.be/NgDoEKyBSA4" target="_blank" rel="noopener noreferrer"><img src="images/michael-cera.jpg" width="300"></a>
+      <p> Michael Cera + Jersey Shore Cast</p>
     </div>
 
     <div>
-      <a href="https://youtu.be/5_9h8ARqRrI"><img src="status.jpg" width="400"></a>
+      <a href="https://youtu.be/5_9h8ARqRrI" target="_blank" rel="noopener noreferrer"><img src="images/status.jpg" width="300"></a>
+      <p> Cool People Dancing in Room </p>
+    </div>
+
+    <div>
+      <a href="https://youtu.be/2lXD0vv-ds8" target="_blank" rel="noopener noreferrer"><img src="images/never-catch-me.png" width="300"></a>
+      <p> A Music Video Directed by Hiro Murai <p>
+    </div>
+
+    <div>
+      <a href="https://youtu.be/4cYYPpZ8rFI" target="_blank" rel="noopener noreferrer"><img src="images/true-stories.jpg" width="300"></a>
+      <p> Mall Scene with David Byrne <p>
     </div>
 
   </section>
