--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<ul>
 				<!-- li stands for list item-->
 				<li><a href="homeworks/hw1-narrative/index.html">Homework One - Narrative</a></li>
-				<li><a href="#">Homework Two - Name of my homework</a></li>
+				<li><a href="homeworks/hw2-multicol/index.html">Homework Two - Videos I Love</a></li>
 				<li><a href="#">Homework Three - Name of my homework</a></li>
 			</ul>
 		</section>
