--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- li stands for list item-->
 				<li><a href="homeworks/hw1-narrative/index.html">Homework One - Narrative</a></li>
 				<li><a href="homeworks/hw2-multicol/index.html">Homework Two - Videos I Love</a></li>
-				<li><a href="#">Homework Three - Name of my homework</a></li>
+				<li><a href="homeworks/hw3-animation/index.html">Homework Three - Animation</a></li>
 			</ul>
 		</section>
 		<aside>
