--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 			<!-- ul stands for unordered list-->
 			<ul>
 				<!-- li stands for list item-->
-				<li><a href="#">Project One - Name of my project</a></li>
-				<li><a href="#">Project Two - Name of my project</a></li>
-				<li><a href="#">Project Three - Name of my project</a></li>
+				<li><a href="https://sabreu98.github.io/project-talkingheads-v1/index.html">Project One - Talking Heads</a></li>
+				<li><a href="https://sabreu98.github.io/project-two-sotr/">Project Two - Sisters of the Road Cafe</a></li>
 			</ul>
 
 
